--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.9",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-native": "0.81.4",
+    "react-native-maps": "^1.26.13",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
   },
