--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^23.4.0",
+    "@react-native-firebase/auth": "^23.4.0",
     "expo": "54.0.12",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.13",
