--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
 
 # typescript
 *.tsbuildinfo
@@ -43,3 +44,4 @@ yarn-error.*
 # important secrets and info
 important.txt
 GoogleService-info.plist
+google-services.json
