--- a/app.json
+++ b/app.json
@@ -14,28 +14,23 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true,
-      "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
-      }
+      "googleServicesFIle": "./GoogleService-Info.plist",
+      "supportsTablet": true
     },
     "android": {
+      "googleServicesFIle": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.anonymous.ParkAPP"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      "@react-native-firebase/app",
-      "@react-native-firebase/auth"
-    ],
-    "extra": {
-      "router": {}
-    }
+      "expo-router"
+    ]
   }
 }
