--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^23.4.0",
     "@react-native-firebase/auth": "^23.4.0",
     "@react-native-firebase/database": "23.4.0",
+    "@react-native-firebase/firestore": "^23.4.0",
     "dotenv": "^17.2.3",
     "expo": "54.0.12",
     "expo-constants": "~18.0.9",
@@ -31,6 +32,7 @@
   },
   "private": true,
   "devDependencies": {
+    "@types/react": "~19.1.10",
     "typescript": "~5.9.2"
   }
 }
