--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/app": "^23.4.0",
     "@react-native-firebase/auth": "^23.4.0",
     "@react-native-firebase/database": "23.4.0",
@@ -19,6 +20,7 @@
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.13",
     "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
     "expo-router": "~6.0.10",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.3.0",
