--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/app": "^23.4.0",
     "@react-native-firebase/auth": "^23.4.0",
-    "@react-native-firebase/database": "23.4.0",
     "@react-native-firebase/firestore": "^23.4.0",
+    "@react-native-firebase/functions": "^23.4.1",
     "dotenv": "^17.2.3",
     "expo": "54.0.12",
     "expo-constants": "~18.0.9",
