--- a/firebase.json
+++ b/firebase.json
@@ -14,5 +14,9 @@
         "npm --prefix \"$RESOURCE_DIR\" run lint"
       ]
     }
-  ]
+  ],
+    "emulators": {
+    "functions": { "port": 5001 },
+    "pubsub": { "port": 8085 }
+  }
 }
