--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
+    "ngeohash": "^0.6.3",
     "papaparse": "^5.4.1"
   },
   "devDependencies": {
